# ae-datastore-sandbox

./: .invenio  Pipfile  README.md  check_jsonschemas.py  docker-compose.full.yml  docker-services.yml  force_symlink.py  install.sh  invenio.cfg  setup-services.sh  start-app.sh  start-celery.sh
docker/nginx/: test.crt  test.key
docker/pgadmin/: servers.json
examples/: query_users_with_ORM.py
site/: .gitkeep  setup.cfg
site/ae_datastore_sandbox/: views.py  webpack.py
tests/: REST_access_token_CRUD.py  REST_access_token_CRUD_community.py  REST_access_token_CRUD_in_community.py  REST_auth_login.py
tests/test_record_service/: create_draft.py  list_routes.py  publish_draft.py  search_drafts.py  search_records.py  update_draft.py  update_record.py
