
[metadata]
name = ae-datastore-sandbox

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    ae_datastore_sandbox_views = ae_datastore_sandbox.views:create_blueprint
invenio_assets.webpack =
    ae_datastore_sandbox_theme = ae_datastore_sandbox.webpack:theme
